--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon src/index.ts",
+    "tw:dev": "npx tailwindcss -i ./src/css/tailwind.css -o ./src/public/tw.css --watch",
     "build": "tsc -p tsconfig.json",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -12,10 +13,26 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "fastify": "^4.18.0"
+    "@fastify/formbody": "^7.4.0",
+    "@fastify/static": "^6.10.2",
+    "@fastify/view": "^7.4.1",
+    "ajv-errors": "^3.0.0",
+    "ajv-i18n": "^4.2.0",
+    "bcrypt": "^5.1.0",
+    "dotenv": "^16.3.1",
+    "ejs": "^3.1.9",
+    "fastify": "^4.18.0",
+    "knex": "^2.4.2",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
+    "pg": "^8.11.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/ejs": "^3.1.2",
     "@types/node": "^20.3.1",
+    "@types/passport": "^1.0.12",
+    "@types/passport-local": "^1.0.35",
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.3"
