--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
       "outDir": "dist",
       "baseUrl": ".",
       "paths": {
-        "*": ["node_modules/*", "src/types/*"]
+        "@/*": ["src/*"]
       }
     },
     "include": [
